@@ -11,6 +11,8 @@ FIXES
 * "View Status" links under "Map" broken in Nagios Core Version 4.1.1 (John Frickson)
 * Can't send big buffer - wproc: Core Worker seems to be choked (velripn / John Frickson)
 * Too big CPU load on FreeBSD and other systems using poll() interface (cejkar)
+FIXES
+* Flexible downtime recorded as unscheduled downtime (John Frickson)
 
 4.1.1 - 08/19/2015
 ------------------
